# RAG-Learning-and-Projects

./: pyproject.toml  requirements.txt
RAG App using Haystack and OpenAI/: main.ipynb
RAG App using Langchain Mistral and Weviate/: main.ipynb
RAG App using Langchain OpenAI API FAISS/: main.ipynb  state_of_the_union (sample).txt
RAG Implementation from Scratch/: RAG_Implementation_from_Scratch.ipynb
