[project]
name = "rag"
version = "0.1.0"
description = "Getting started with RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "collection>=0.1.6",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.15.0",
    "pykernel>=0.1.6",
    "rapidocr-onnxruntime>=1.4.4",
    "tiktoken>=0.12.0",
]
